--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="app-header">
-🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)
+🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ 
 </header>
 
 <div id="app"></div>
