--- a/index.html
+++ b/index.html
@@ -1,20 +1,141 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์</title>
-
-<link rel="manifest" href="./manifest.json">
-<link rel="icon" href="data:,">
+<meta charset="UTF-8">
+<title>SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
+<style>
+:root{--primary:#2563eb;--danger:#dc2626;--bg:#f1f5f9}
+*{box-sizing:border-box}
+body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:var(--bg)}
+header{background:linear-gradient(90deg,#1e3a8a,#2563eb);color:#fff;padding:20px 30px;font-size:24px;font-weight:700}
+.container{padding:32px;max-width:1700px;margin:auto}
+button,input,select,textarea{width:100%;padding:14px;border-radius:16px;border:1px solid #c7d2fe;font-size:14px}
+button{background:var(--primary);color:#fff;border:none;cursor:pointer;font-weight:600;transition:.2s}
+button:hover{transform:translateY(-2px)}
+button.danger{background:var(--danger)}
+.card{background:#fff;border-radius:28px;padding:30px;margin-bottom:30px;box-shadow:0 25px 50px rgba(0,0,0,.15)}
+.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:28px}
+.table{width:100%;border-collapse:collapse;border-radius:26px;overflow:hidden}
+th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
+.modal{position:fixed;inset:0;background:rgba(0,0,0,.65);display:none;align-items:center;justify-content:center}
+.modal-box{background:#fff;width:96%;max-width:1500px;border-radius:36px;padding:44px;max-height:92vh;overflow:auto}
+.section-title{font-size:18px;font-weight:700;margin-bottom:12px}
+.badge{padding:6px 16px;border-radius:999px;font-size:12px;font-weight:700}
+.NEW{background:#fee2e2;color:#991b1b}
+.INPROGRESS{background:#fef3c7;color:#92400e}
+.DONE{background:#dcfce7;color:#166534}
+.confirm-box{background:#fff;border-radius:28px;padding:34px;max-width:420px;width:90%;text-align:center}
+.confirm-actions{display:flex;gap:26px;margin-top:28px}
+</style>
 </head>
 <body>
 
-<header class="app-header">
-🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ 
-</header>
+<header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</header>
 
-<div id="app"></div>
+<div class="container">
+<div class="card">
+<div class="grid">
+<select id="vehicleSelect"></select>
+<input id="searchInput" placeholder="🔍 ค้นหาประวัติการซ่อม (ทุกฟิลด์)">
+<button onclick="openModal()">➕ เพิ่มประวัติการซ่อม</button>
+<button class="danger" onclick="confirmDeleteVehicle()">🗑 ลบรถและประวัติทั้งหมด</button>
+</div>
+</div>
+
+<div class="card">
+<table class="table">
+<thead>
+<tr>
+<th>วันที่</th><th>รถ</th><th>ระบบ</th><th>อาการ</th><th>ผู้ซ่อม</th><th>ค่าใช้จ่ายรวม</th><th>สถานะ</th><th>ลบ</th>
+</tr>
+</thead>
+<tbody id="tbody"></tbody>
+</table>
+</div>
+</div>
+
+<div class="modal" id="modal">
+<div class="modal-box">
+<h2>บันทึกรายละเอียดการซ่อมบำรุง (Ultra Detail)</h2>
+
+<div class="card">
+<div class="section-title">ข้อมูลรถ (Vehicle Identity)</div>
+<div class="grid">
+<input id="plate" placeholder="ทะเบียนรถ">
+<input id="brand" placeholder="ยี่ห้อ">
+<input id="model" placeholder="รุ่น">
+<input id="year" placeholder="ปีรถ">
+<input id="vin" placeholder="VIN / Chassis No.">
+<input id="engineNo" placeholder="Engine No.">
+<input id="mileage" placeholder="เลขไมล์ ณ วันที่ซ่อม">
+<input id="fuelType" placeholder="ประเภทเชื้อเพลิง">
+<input id="usageType" placeholder="ลักษณะการใช้งาน (ท่องเที่ยว / ขนของ / ออฟโรด)">
+</div>
+</div>
+
+<div class="card">
+<div class="section-title">รายละเอียดงานซ่อม (Maintenance Detail)</div>
+<div class="grid">
+<input type="date" id="date">
+<input id="system" placeholder="ระบบที่ซ่อม (เครื่องยนต์ / เบรก / ช่วงล่าง / ไฟฟ้า ฯลฯ)">
+<select id="jobType">
+<option>PM - Preventive</option>
+<option>CM - Corrective</option>
+<option>Emergency</option>
+<option>Accident</option>
+</select>
+<select id="priority">
+<option>ต่ำ</option><option>กลาง</option><option>สูง</option><option>วิกฤต</option>
+</select>
+<select id="status">
+<option class="NEW">NEW</option>
+<option class="INPROGRESS">INPROGRESS</option>
+<option class="DONE">DONE</option>
+</select>
+</div>
+<textarea id="symptoms" placeholder="อาการเสีย (Symptoms) — อธิบายละเอียดที่สุด"></textarea>
+<textarea id="rootCause" placeholder="สาเหตุที่แท้จริง (Root Cause Analysis)"></textarea>
+<textarea id="diagnosis" placeholder="ขั้นตอนการวิเคราะห์ / ตรวจสอบ (Diagnosis Process)"></textarea>
+<textarea id="repairMethod" placeholder="วิธีการซ่อม / การแก้ไข (Repair Method)"></textarea>
+<textarea id="prevention" placeholder="แนวทางป้องกันการเกิดซ้ำ (Preventive Action)"></textarea>
+<textarea id="testResult" placeholder="ผลการทดสอบหลังซ่อม (Test Result)"></textarea>
+</div>
+
+<div class="card">
+<div class="section-title">อะไหล่ ค่าใช้จ่าย และผู้รับผิดชอบ</div>
+<div class="grid">
+<input id="technician" placeholder="ชื่อช่าง / ผู้ซ่อม">
+<input id="supervisor" placeholder="ผู้ตรวจรับงาน">
+<input id="vendor" placeholder="อู่ / บริษัทผู้ให้บริการ">
+<input id="partsList" placeholder="รายการอะไหล่ที่เปลี่ยน (คั่นด้วย , )">
+<input id="partsCost" type="number" placeholder="ค่าอะไหล่ (บาท)">
+<input id="laborCost" type="number" placeholder="ค่าแรง (บาท)">
+<input id="otherCost" type="number" placeholder="ค่าใช้จ่ายอื่น (บาท)">
+<input id="downtime" placeholder="Downtime (ชั่วโมง/วัน)">
+<input id="warranty" placeholder="การรับประกันงานซ่อม">
+</div>
+<textarea id="remark" placeholder="หมายเหตุเพิ่มเติม / ข้อสังเกต"></textarea>
+</div>
+
+<div class="confirm-actions">
+<button onclick="save()">บันทึกข้อมูล</button>
+<button class="danger" onclick="closeModal()">ยกเลิก</button>
+</div>
+
+</div>
+</div>
+
+<div class="modal" id="confirmModal">
+<div class="confirm-box">
+<h3 id="confirmText"></h3>
+<div class="confirm-actions">
+<button id="confirmYes">ยืนยัน</button>
+<button class="danger" onclick="closeConfirm()">ยกเลิก</button>
+</div>
+</div>
+</div>
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -26,16 +147,86 @@ const firebaseConfig = {
   projectId: "vehicle-maintenance-64890"
 };
 firebase.initializeApp(firebaseConfig);
-</script>
+const db = firebase.firestore();
 
-<script src="./app.js"></script>
+let unsubscribe=null;
+let pendingAction=null;
 
-<script>
-if ("serviceWorker" in navigator) {
-  window.addEventListener("load", () => {
-    navigator.serviceWorker.register("./sw.js");
+function loadVehicles(){
+  db.collection("vehicles").onSnapshot(snap=>{
+    vehicleSelect.innerHTML="";
+    snap.forEach(doc=>{
+      let o=document.createElement("option");
+      o.value=doc.id;o.textContent=doc.id;
+      vehicleSelect.appendChild(o);
+    });
+    if(vehicleSelect.value) loadRepairs(vehicleSelect.value);
   });
 }
+
+vehicleSelect.onchange=()=>loadRepairs(vehicleSelect.value);
+
+function loadRepairs(v){
+  if(unsubscribe) unsubscribe();
+  unsubscribe=db.collection("vehicles").doc(v).collection("repairs").onSnapshot(snap=>{
+    tbody.innerHTML="";
+    snap.forEach(doc=>{
+      let r=doc.data();
+      let cost=(+r.partsCost||0)+(+r.laborCost||0)+(+r.otherCost||0);
+      if(searchInput.value && !JSON.stringify(r).toLowerCase().includes(searchInput.value.toLowerCase())) return;
+      tbody.innerHTML+=`<tr>
+      <td>${r.date||""}</td><td>${v}</td><td>${r.system||""}</td>
+      <td>${(r.symptoms||"").substring(0,60)}...</td>
+      <td>${r.technician||""}</td>
+      <td>${cost.toLocaleString()}</td>
+      <td><span class="badge ${r.status||"NEW"}">${r.status||"NEW"}</span></td>
+      <td><button class="danger" onclick="confirmDeleteRecord('${v}','${doc.id}')">ลบ</button></td>
+      </tr>`;
+    });
+  });
+}
+
+function openModal(){modal.style.display='flex'}
+function closeModal(){modal.style.display='none'}
+
+function confirmDeleteVehicle(){
+  confirmText.innerText="ยืนยันการลบรถและประวัติทั้งหมด?";
+  pendingAction=()=>db.collection("vehicles").doc(vehicleSelect.value).delete();
+  confirmModal.style.display='flex';
+}
+
+function confirmDeleteRecord(v,id){
+  confirmText.innerText="ยืนยันการลบประวัติการซ่อมรายการนี้?";
+  pendingAction=()=>db.collection("vehicles").doc(v).collection("repairs").doc(id).delete();
+  confirmModal.style.display='flex';
+}
+
+confirmYes.onclick=()=>{pendingAction();confirmModal.style.display='none'}
+function closeConfirm(){confirmModal.style.display='none'}
+
+function save(){
+  let key = plate.value+" | "+brand.value+" "+model.value;
+  let ref=db.collection("vehicles").doc(key);
+  ref.set({created:new Date()},{merge:true});
+  ref.collection("repairs").add({
+    plate:plate.value,brand:brand.value,model:model.value,year:year.value,vin:vin.value,
+    engineNo:engineNo.value,mileage:mileage.value,fuelType:fuelType.value,usageType:usageType.value,
+    date:date.value,system:system.value,jobType:jobType.value,priority:priority.value,status:status.value,
+    symptoms:symptoms.value,rootCause:rootCause.value,diagnosis:diagnosis.value,
+    repairMethod:repairMethod.value,prevention:prevention.value,testResult:testResult.value,
+    technician:technician.value,supervisor:supervisor.value,vendor:vendor.value,
+    partsList:partsList.value,partsCost:partsCost.value,laborCost:laborCost.value,
+    otherCost:otherCost.value,downtime:downtime.value,warranty:warranty.value,remark:remark.value,
+    createdAt:new Date()
+  });
+  closeModal();
+}
+
+loadVehicles();
+</script>
+
+<script>
+if("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js");}
 </script>
 
 </body>
