--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <title>SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json">
+
 <style>
-:root{--primary:#2563eb;--danger:#dc2626;--bg:#f1f5f9}
+:root{--primary:#2563eb;--danger:#dc2626;--success:#16a34a;--bg:#f1f5f9}
 *{box-sizing:border-box}
 body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:var(--bg)}
 header{background:linear-gradient(90deg,#1e3a8a,#2563eb);color:#fff;padding:20px 30px;font-size:24px;font-weight:700}
@@ -19,120 +20,83 @@ button.danger{background:var(--danger)}
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:28px}
 .table{width:100%;border-collapse:collapse;border-radius:26px;overflow:hidden}
 th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
-.modal{position:fixed;inset:0;background:rgba(0,0,0,.65);display:none;align-items:center;justify-content:center}
+.modal{position:fixed;inset:0;background:rgba(0,0,0,.65);display:none;align-items:center;justify-content:center;z-index:10}
 .modal-box{background:#fff;width:96%;max-width:1500px;border-radius:36px;padding:44px;max-height:92vh;overflow:auto}
 .section-title{font-size:18px;font-weight:700;margin-bottom:12px}
 .badge{padding:6px 16px;border-radius:999px;font-size:12px;font-weight:700}
 .NEW{background:#fee2e2;color:#991b1b}
 .INPROGRESS{background:#fef3c7;color:#92400e}
 .DONE{background:#dcfce7;color:#166534}
-.confirm-box{background:#fff;border-radius:28px;padding:34px;max-width:420px;width:90%;text-align:center}
-.confirm-actions{display:flex;gap:26px;margin-top:28px}
+
+/* popup */
+.toast{
+  position:fixed;top:30px;right:30px;
+  background:#fff;padding:18px 26px;
+  border-radius:20px;box-shadow:0 20px 40px rgba(0,0,0,.2);
+  display:none;align-items:center;gap:14px;z-index:99
+}
+.toast.success{border-left:8px solid var(--success)}
+.toast.error{border-left:8px solid var(--danger)}
 </style>
 </head>
-<body>
 
+<body>
 <header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</header>
 
-<div class="container">
-<div class="card">
-<div class="grid">
-<select id="vehicleSelect"></select>
-<input id="searchInput" placeholder="🔍 ค้นหาประวัติการซ่อม (ทุกฟิลด์)">
-<button onclick="openModal()">➕ เพิ่มประวัติการซ่อม</button>
-<button class="danger" onclick="confirmDeleteVehicle()">🗑 ลบรถและประวัติทั้งหมด</button>
-</div>
-</div>
+<div class="toast" id="toast"><span id="toastText"></span></div>
 
-<div class="card">
-<table class="table">
-<thead>
-<tr>
-<th>วันที่</th><th>รถ</th><th>ระบบ</th><th>อาการ</th><th>ผู้ซ่อม</th><th>ค่าใช้จ่ายรวม</th><th>สถานะ</th><th>ลบ</th>
-</tr>
-</thead>
-<tbody id="tbody"></tbody>
-</table>
-</div>
+<div class="container">
+  <div class="card">
+    <div class="grid">
+      <select id="vehicleSelect"></select>
+      <input id="searchInput" placeholder="🔍 ค้นหาประวัติการซ่อม">
+      <button onclick="openModal()">➕ เพิ่มประวัติการซ่อม</button>
+      <button class="danger" onclick="deleteVehicle()">🗑 ลบรถทั้งหมด</button>
+    </div>
+  </div>
+
+  <div class="card">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>วันที่</th><th>รถ</th><th>ระบบ</th><th>อาการ</th>
+          <th>ผู้ซ่อม</th><th>ค่าใช้จ่าย</th><th>สถานะ</th>
+        </tr>
+      </thead>
+      <tbody id="tbody"></tbody>
+    </table>
+  </div>
 </div>
 
 <div class="modal" id="modal">
 <div class="modal-box">
-<h2>บันทึกรายละเอียดการซ่อมบำรุง (Ultra Detail)</h2>
+<h2>บันทึกงานซ่อม</h2>
 
-<div class="card">
-<div class="section-title">ข้อมูลรถ (Vehicle Identity)</div>
 <div class="grid">
 <input id="plate" placeholder="ทะเบียนรถ">
 <input id="brand" placeholder="ยี่ห้อ">
 <input id="model" placeholder="รุ่น">
-<input id="year" placeholder="ปีรถ">
-<input id="vin" placeholder="VIN / Chassis No.">
-<input id="engineNo" placeholder="Engine No.">
-<input id="mileage" placeholder="เลขไมล์ ณ วันที่ซ่อม">
-<input id="fuelType" placeholder="ประเภทเชื้อเพลิง">
-<input id="usageType" placeholder="ลักษณะการใช้งาน (ท่องเที่ยว / ขนของ / ออฟโรด)">
-</div>
-</div>
-
-<div class="card">
-<div class="section-title">รายละเอียดงานซ่อม (Maintenance Detail)</div>
-<div class="grid">
 <input type="date" id="date">
-<input id="system" placeholder="ระบบที่ซ่อม (เครื่องยนต์ / เบรก / ช่วงล่าง / ไฟฟ้า ฯลฯ)">
-<select id="jobType">
-<option>PM - Preventive</option>
-<option>CM - Corrective</option>
-<option>Emergency</option>
-<option>Accident</option>
-</select>
-<select id="priority">
-<option>ต่ำ</option><option>กลาง</option><option>สูง</option><option>วิกฤต</option>
-</select>
+<input id="system" placeholder="ระบบที่ซ่อม">
+<input id="technician" placeholder="ช่าง">
 <select id="status">
-<option class="NEW">NEW</option>
-<option class="INPROGRESS">INPROGRESS</option>
-<option class="DONE">DONE</option>
+<option>NEW</option>
+<option>INPROGRESS</option>
+<option>DONE</option>
 </select>
 </div>
-<textarea id="symptoms" placeholder="อาการเสีย (Symptoms) — อธิบายละเอียดที่สุด"></textarea>
-<textarea id="rootCause" placeholder="สาเหตุที่แท้จริง (Root Cause Analysis)"></textarea>
-<textarea id="diagnosis" placeholder="ขั้นตอนการวิเคราะห์ / ตรวจสอบ (Diagnosis Process)"></textarea>
-<textarea id="repairMethod" placeholder="วิธีการซ่อม / การแก้ไข (Repair Method)"></textarea>
-<textarea id="prevention" placeholder="แนวทางป้องกันการเกิดซ้ำ (Preventive Action)"></textarea>
-<textarea id="testResult" placeholder="ผลการทดสอบหลังซ่อม (Test Result)"></textarea>
-</div>
 
-<div class="card">
-<div class="section-title">อะไหล่ ค่าใช้จ่าย และผู้รับผิดชอบ</div>
+<textarea id="symptoms" placeholder="อาการ"></textarea>
+
 <div class="grid">
-<input id="technician" placeholder="ชื่อช่าง / ผู้ซ่อม">
-<input id="supervisor" placeholder="ผู้ตรวจรับงาน">
-<input id="vendor" placeholder="อู่ / บริษัทผู้ให้บริการ">
-<input id="partsList" placeholder="รายการอะไหล่ที่เปลี่ยน (คั่นด้วย , )">
-<input id="partsCost" type="number" placeholder="ค่าอะไหล่ (บาท)">
-<input id="laborCost" type="number" placeholder="ค่าแรง (บาท)">
-<input id="otherCost" type="number" placeholder="ค่าใช้จ่ายอื่น (บาท)">
-<input id="downtime" placeholder="Downtime (ชั่วโมง/วัน)">
-<input id="warranty" placeholder="การรับประกันงานซ่อม">
-</div>
-<textarea id="remark" placeholder="หมายเหตุเพิ่มเติม / ข้อสังเกต"></textarea>
+<input type="number" id="partsCost" placeholder="ค่าอะไหล่">
+<input type="number" id="laborCost" placeholder="ค่าแรง">
+<input type="number" id="otherCost" placeholder="อื่นๆ">
 </div>
 
-<div class="confirm-actions">
-<button onclick="save()">บันทึกข้อมูล</button>
+<div class="grid">
+<button onclick="save()">💾 บันทึก</button>
 <button class="danger" onclick="closeModal()">ยกเลิก</button>
-</div>
-
-</div>
-</div>
-
-<div class="modal" id="confirmModal">
-<div class="confirm-box">
-<h3 id="confirmText"></h3>
-<div class="confirm-actions">
-<button id="confirmYes">ยืนยัน</button>
-<button class="danger" onclick="closeConfirm()">ยกเลิก</button>
 </div>
 </div>
 </div>
@@ -141,23 +105,29 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
 <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
-  authDomain: "vehicle-maintenance-64890.firebaseapp.com",
-  projectId: "vehicle-maintenance-64890"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.firestore();
+firebase.initializeApp({
+  apiKey:"AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
+  authDomain:"vehicle-maintenance-64890.firebaseapp.com",
+  projectId:"vehicle-maintenance-64890"
+});
+const db=firebase.firestore();
 
-let unsubscribe=null;
-let pendingAction=null;
+const toast=(msg,type="success")=>{
+  toastText.innerText=msg;
+  toast.className="toast "+type;
+  toast.style.display="flex";
+  setTimeout(()=>toast.style.display="none",3000);
+};
+
+function openModal(){modal.style.display="flex"}
+function closeModal(){modal.style.display="none"}
 
 function loadVehicles(){
-  db.collection("vehicles").onSnapshot(snap=>{
+  db.collection("vehicles").onSnapshot(s=>{
     vehicleSelect.innerHTML="";
-    snap.forEach(doc=>{
+    s.forEach(d=>{
       let o=document.createElement("option");
-      o.value=doc.id;o.textContent=doc.id;
+      o.value=d.id;o.textContent=d.id;
       vehicleSelect.appendChild(o);
     });
     if(vehicleSelect.value) loadRepairs(vehicleSelect.value);
@@ -167,67 +137,49 @@ function loadVehicles(){
 vehicleSelect.onchange=()=>loadRepairs(vehicleSelect.value);
 
 function loadRepairs(v){
-  if(unsubscribe) unsubscribe();
-  unsubscribe=db.collection("vehicles").doc(v).collection("repairs").onSnapshot(snap=>{
+  db.collection("vehicles").doc(v).collection("repairs")
+  .orderBy("createdAt","desc")
+  .onSnapshot(s=>{
     tbody.innerHTML="";
-    snap.forEach(doc=>{
-      let r=doc.data();
+    s.forEach(d=>{
+      let r=d.data();
       let cost=(+r.partsCost||0)+(+r.laborCost||0)+(+r.otherCost||0);
-      if(searchInput.value && !JSON.stringify(r).toLowerCase().includes(searchInput.value.toLowerCase())) return;
-      tbody.innerHTML+=`<tr>
-      <td>${r.date||""}</td><td>${v}</td><td>${r.system||""}</td>
-      <td>${(r.symptoms||"").substring(0,60)}...</td>
-      <td>${r.technician||""}</td>
-      <td>${cost.toLocaleString()}</td>
-      <td><span class="badge ${r.status||"NEW"}">${r.status||"NEW"}</span></td>
-      <td><button class="danger" onclick="confirmDeleteRecord('${v}','${doc.id}')">ลบ</button></td>
+      tbody.innerHTML+=`
+      <tr>
+        <td>${r.date||""}</td>
+        <td>${v}</td>
+        <td>${r.system||""}</td>
+        <td>${r.symptoms||""}</td>
+        <td>${r.technician||""}</td>
+        <td>${cost.toLocaleString()}</td>
+        <td><span class="badge ${r.status}">${r.status}</span></td>
       </tr>`;
     });
   });
 }
 
-function openModal(){modal.style.display='flex'}
-function closeModal(){modal.style.display='none'}
-
-function confirmDeleteVehicle(){
-  confirmText.innerText="ยืนยันการลบรถและประวัติทั้งหมด?";
-  pendingAction=()=>db.collection("vehicles").doc(vehicleSelect.value).delete();
-  confirmModal.style.display='flex';
-}
-
-function confirmDeleteRecord(v,id){
-  confirmText.innerText="ยืนยันการลบประวัติการซ่อมรายการนี้?";
-  pendingAction=()=>db.collection("vehicles").doc(v).collection("repairs").doc(id).delete();
-  confirmModal.style.display='flex';
-}
-
-confirmYes.onclick=()=>{pendingAction();confirmModal.style.display='none'}
-function closeConfirm(){confirmModal.style.display='none'}
-
-function save(){
-  let key = plate.value+" | "+brand.value+" "+model.value;
-  let ref=db.collection("vehicles").doc(key);
-  ref.set({created:new Date()},{merge:true});
-  ref.collection("repairs").add({
-    plate:plate.value,brand:brand.value,model:model.value,year:year.value,vin:vin.value,
-    engineNo:engineNo.value,mileage:mileage.value,fuelType:fuelType.value,usageType:usageType.value,
-    date:date.value,system:system.value,jobType:jobType.value,priority:priority.value,status:status.value,
-    symptoms:symptoms.value,rootCause:rootCause.value,diagnosis:diagnosis.value,
-    repairMethod:repairMethod.value,prevention:prevention.value,testResult:testResult.value,
-    technician:technician.value,supervisor:supervisor.value,vendor:vendor.value,
-    partsList:partsList.value,partsCost:partsCost.value,laborCost:laborCost.value,
-    otherCost:otherCost.value,downtime:downtime.value,warranty:warranty.value,remark:remark.value,
-    createdAt:new Date()
-  });
-  closeModal();
+async function save(){
+  try{
+    let key=plate.value+" | "+brand.value+" "+model.value;
+    let ref=db.collection("vehicles").doc(key);
+    await ref.set({created:new Date()},{merge:true});
+    await ref.collection("repairs").add({
+      plate:plate.value,brand:brand.value,model:model.value,
+      date:date.value,system:system.value,technician:technician.value,
+      status:status.value,symptoms:symptoms.value,
+      partsCost:partsCost.value,laborCost:laborCost.value,
+      otherCost:otherCost.value,createdAt:new Date()
+    });
+    vehicleSelect.value=key;
+    loadRepairs(key);
+    closeModal();
+    toast("บันทึกข้อมูลสำเร็จ ✅","success");
+  }catch(e){
+    toast("บันทึกไม่สำเร็จ ❌","error");
+  }
 }
 
 loadVehicles();
 </script>
-
-<script>
-if("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js");}
-</script>
-
 </body>
 </html>
