--- a/index.html
+++ b/index.html
@@ -260,5 +260,23 @@ async function save(){
 loadVehicles();
 if("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js");}
 </script>
+
+<!-- Firebase compat (FIXED) -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
+    authDomain: "vehicle-maintenance-64890.firebaseapp.com",
+    projectId: "vehicle-maintenance-64890",
+  };
+
+  if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+  }
+  const db = firebase.firestore();
+</script>
+
 </body>
 </html>
