--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 <title>SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json">
-<link rel="icon" href="icon-192.png">
-
 <style>
-:root{--primary:#2563eb;--danger:#dc2626;--success:#16a34a;--bg:#f1f5f9}
+:root{--primary:#2563eb;--danger:#dc2626;--bg:#f1f5f9}
 *{box-sizing:border-box}
 body{margin:0;font-family:Segoe UI,Arial,sans-serif;background:var(--bg)}
 header{background:linear-gradient(90deg,#1e3a8a,#2563eb);color:#fff;padding:20px 30px;font-size:24px;font-weight:700}
@@ -21,30 +19,20 @@ button.danger{background:var(--danger)}
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:28px}
 .table{width:100%;border-collapse:collapse;border-radius:26px;overflow:hidden}
 th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
-.modal{position:fixed;inset:0;background:rgba(0,0,0,.65);display:none;align-items:center;justify-content:center;z-index:10}
+.modal{position:fixed;inset:0;background:rgba(0,0,0,.65);display:none;align-items:center;justify-content:center}
 .modal-box{background:#fff;width:96%;max-width:1500px;border-radius:36px;padding:44px;max-height:92vh;overflow:auto}
 .section-title{font-size:18px;font-weight:700;margin-bottom:12px}
 .badge{padding:6px 16px;border-radius:999px;font-size:12px;font-weight:700}
 .NEW{background:#fee2e2;color:#991b1b}
 .INPROGRESS{background:#fef3c7;color:#92400e}
 .DONE{background:#dcfce7;color:#166534}
-
-/* toast */
-.toast{
-  position:fixed;top:24px;right:24px;
-  background:#fff;padding:16px 24px;border-radius:18px;
-  box-shadow:0 20px 40px rgba(0,0,0,.2);
-  display:none;z-index:999
-}
-.toast.success{border-left:8px solid var(--success)}
-.toast.error{border-left:8px solid var(--danger)}
+.confirm-box{background:#fff;border-radius:28px;padding:34px;max-width:420px;width:90%;text-align:center}
+.confirm-actions{display:flex;gap:26px;margin-top:28px}
 </style>
 </head>
-
 <body>
-<header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</header>
 
-<div class="toast" id="toastBox"><span id="toastText"></span></div>
+<header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</header>
 
 <div class="container">
 <div class="card">
@@ -60,8 +48,7 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 <table class="table">
 <thead>
 <tr>
-<th>วันที่</th><th>รถ</th><th>ระบบ</th><th>อาการ</th>
-<th>ผู้ซ่อม</th><th>ค่าใช้จ่ายรวม</th><th>สถานะ</th><th>ลบ</th>
+<th>วันที่</th><th>รถ</th><th>ระบบ</th><th>อาการ</th><th>ผู้ซ่อม</th><th>ค่าใช้จ่ายรวม</th><th>สถานะ</th><th>ลบ</th>
 </tr>
 </thead>
 <tbody id="tbody"></tbody>
@@ -69,7 +56,6 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 </div>
 </div>
 
-<!-- ===== MODAL ===== -->
 <div class="modal" id="modal">
 <div class="modal-box">
 <h2>บันทึกรายละเอียดการซ่อมบำรุง (Ultra Detail)</h2>
@@ -85,15 +71,15 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 <input id="engineNo" placeholder="Engine No.">
 <input id="mileage" placeholder="เลขไมล์ ณ วันที่ซ่อม">
 <input id="fuelType" placeholder="ประเภทเชื้อเพลิง">
-<input id="usageType" placeholder="ลักษณะการใช้งาน">
+<input id="usageType" placeholder="ลักษณะการใช้งาน (ท่องเที่ยว / ขนของ / ออฟโรด)">
 </div>
 </div>
 
 <div class="card">
-<div class="section-title">รายละเอียดงานซ่อม</div>
+<div class="section-title">รายละเอียดงานซ่อม (Maintenance Detail)</div>
 <div class="grid">
 <input type="date" id="date">
-<input id="system" placeholder="ระบบที่ซ่อม">
+<input id="system" placeholder="ระบบที่ซ่อม (เครื่องยนต์ / เบรก / ช่วงล่าง / ไฟฟ้า ฯลฯ)">
 <select id="jobType">
 <option>PM - Preventive</option>
 <option>CM - Corrective</option>
@@ -109,42 +95,42 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 <option class="DONE">DONE</option>
 </select>
 </div>
-<textarea id="symptoms" placeholder="อาการเสีย"></textarea>
-<textarea id="rootCause" placeholder="Root Cause"></textarea>
-<textarea id="diagnosis" placeholder="Diagnosis"></textarea>
-<textarea id="repairMethod" placeholder="Repair Method"></textarea>
-<textarea id="prevention" placeholder="Preventive Action"></textarea>
-<textarea id="testResult" placeholder="Test Result"></textarea>
+<textarea id="symptoms" placeholder="อาการเสีย (Symptoms) — อธิบายละเอียดที่สุด"></textarea>
+<textarea id="rootCause" placeholder="สาเหตุที่แท้จริง (Root Cause Analysis)"></textarea>
+<textarea id="diagnosis" placeholder="ขั้นตอนการวิเคราะห์ / ตรวจสอบ (Diagnosis Process)"></textarea>
+<textarea id="repairMethod" placeholder="วิธีการซ่อม / การแก้ไข (Repair Method)"></textarea>
+<textarea id="prevention" placeholder="แนวทางป้องกันการเกิดซ้ำ (Preventive Action)"></textarea>
+<textarea id="testResult" placeholder="ผลการทดสอบหลังซ่อม (Test Result)"></textarea>
 </div>
 
 <div class="card">
-<div class="section-title">ค่าใช้จ่าย / ผู้รับผิดชอบ</div>
+<div class="section-title">อะไหล่ ค่าใช้จ่าย และผู้รับผิดชอบ</div>
 <div class="grid">
-<input id="technician" placeholder="ช่าง">
-<input id="supervisor" placeholder="ผู้ตรวจรับ">
-<input id="vendor" placeholder="อู่ / บริษัท">
-<input id="partsList" placeholder="รายการอะไหล่">
-<input id="partsCost" type="number" placeholder="ค่าอะไหล่">
-<input id="laborCost" type="number" placeholder="ค่าแรง">
-<input id="otherCost" type="number" placeholder="อื่นๆ">
-<input id="downtime" placeholder="Downtime">
-<input id="warranty" placeholder="การรับประกัน">
+<input id="technician" placeholder="ชื่อช่าง / ผู้ซ่อม">
+<input id="supervisor" placeholder="ผู้ตรวจรับงาน">
+<input id="vendor" placeholder="อู่ / บริษัทผู้ให้บริการ">
+<input id="partsList" placeholder="รายการอะไหล่ที่เปลี่ยน (คั่นด้วย , )">
+<input id="partsCost" type="number" placeholder="ค่าอะไหล่ (บาท)">
+<input id="laborCost" type="number" placeholder="ค่าแรง (บาท)">
+<input id="otherCost" type="number" placeholder="ค่าใช้จ่ายอื่น (บาท)">
+<input id="downtime" placeholder="Downtime (ชั่วโมง/วัน)">
+<input id="warranty" placeholder="การรับประกันงานซ่อม">
 </div>
-<textarea id="remark" placeholder="หมายเหตุ"></textarea>
+<textarea id="remark" placeholder="หมายเหตุเพิ่มเติม / ข้อสังเกต"></textarea>
 </div>
 
-<div class="grid">
-<button onclick="save()">💾 บันทึกข้อมูล</button>
+<div class="confirm-actions">
+<button onclick="save()">บันทึกข้อมูล</button>
 <button class="danger" onclick="closeModal()">ยกเลิก</button>
 </div>
+
 </div>
 </div>
 
-<!-- CONFIRM -->
 <div class="modal" id="confirmModal">
-<div class="modal-box" style="max-width:420px">
+<div class="confirm-box">
 <h3 id="confirmText"></h3>
-<div class="grid">
+<div class="confirm-actions">
 <button id="confirmYes">ยืนยัน</button>
 <button class="danger" onclick="closeConfirm()">ยกเลิก</button>
 </div>
@@ -155,113 +141,96 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
 <script>
-firebase.initializeApp({
-  apiKey:"AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
-  authDomain:"vehicle-maintenance-64890.firebaseapp.com",
-  projectId:"vehicle-maintenance-64890"
-});
-const db=firebase.firestore();
+const firebaseConfig = {
+  apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
+  authDomain: "vehicle-maintenance-64890.firebaseapp.com",
+  projectId: "vehicle-maintenance-64890"
+};
 
-let unsubscribe=null,pendingAction=null;
 
-const toastBox=document.getElementById("toastBox");
-const toastText=document.getElementById("toastText");
-function showToast(msg,type="success"){
-  toastText.innerText=msg;
-  toastBox.className="toast "+type;
-  toastBox.style.display="block";
-  setTimeout(()=>toastBox.style.display="none",3000);
-}
 
-function openModal(){modal.style.display="flex"}
-function closeModal(){modal.style.display="none"}
-function closeConfirm(){confirmModal.style.display="none"}
+let unsubscribe=null;
+let pendingAction=null;
 
 function loadVehicles(){
-  db.collection("vehicles").onSnapshot(s=>{
+  db.collection("vehicles").onSnapshot(snap=>{
     vehicleSelect.innerHTML="";
-    s.forEach(d=>{
+    snap.forEach(doc=>{
       let o=document.createElement("option");
-      o.value=d.id;o.textContent=d.id;
+      o.value=doc.id;o.textContent=doc.id;
       vehicleSelect.appendChild(o);
     });
     if(vehicleSelect.value) loadRepairs(vehicleSelect.value);
   });
 }
+
 vehicleSelect.onchange=()=>loadRepairs(vehicleSelect.value);
 
 function loadRepairs(v){
   if(unsubscribe) unsubscribe();
-  unsubscribe=db.collection("vehicles").doc(v).collection("repairs")
-  .orderBy("createdAt","desc")
-  .onSnapshot(s=>{
+  unsubscribe=db.collection("vehicles").doc(v).collection("repairs").onSnapshot(snap=>{
     tbody.innerHTML="";
-    s.forEach(d=>{
-      let r=d.data();
+    snap.forEach(doc=>{
+      let r=doc.data();
       let cost=(+r.partsCost||0)+(+r.laborCost||0)+(+r.otherCost||0);
       if(searchInput.value && !JSON.stringify(r).toLowerCase().includes(searchInput.value.toLowerCase())) return;
-      tbody.innerHTML+=`
-      <tr>
-        <td>${r.date||""}</td>
-        <td>${v}</td>
-        <td>${r.system||""}</td>
-        <td>${(r.symptoms||"").substring(0,60)}...</td>
-        <td>${r.technician||""}</td>
-        <td>${cost.toLocaleString()}</td>
-        <td><span class="badge ${r.status}">${r.status}</span></td>
-        <td><button class="danger" onclick="confirmDeleteRecord('${v}','${d.id}')">ลบ</button></td>
+      tbody.innerHTML+=`<tr>
+      <td>${r.date||""}</td><td>${v}</td><td>${r.system||""}</td>
+      <td>${(r.symptoms||"").substring(0,60)}...</td>
+      <td>${r.technician||""}</td>
+      <td>${cost.toLocaleString()}</td>
+      <td><span class="badge ${r.status||"NEW"}">${r.status||"NEW"}</span></td>
+      <td><button class="danger" onclick="confirmDeleteRecord('${v}','${doc.id}')">ลบ</button></td>
       </tr>`;
     });
   });
 }
 
+function openModal(){modal.style.display='flex'}
+function closeModal(){modal.style.display='none'}
+
 function confirmDeleteVehicle(){
   confirmText.innerText="ยืนยันการลบรถและประวัติทั้งหมด?";
   pendingAction=()=>db.collection("vehicles").doc(vehicleSelect.value).delete();
-  confirmModal.style.display="flex";
+  confirmModal.style.display='flex';
 }
-function confirmDeleteRecord(v,id){
-  confirmText.innerText="ยืนยันการลบรายการนี้?";
-  pendingAction=()=>db.collection("vehicles").doc(v).collection("repairs").doc(id).delete();
-  confirmModal.style.display="flex";
-}
-confirmYes.onclick=()=>{pendingAction();closeConfirm()}
 
-async function save(){
-  try{
-    const key=plate.value+" | "+brand.value+" "+model.value;
-    const ref=db.collection("vehicles").doc(key);
-    await ref.set({created:new Date()},{merge:true});
-    await ref.collection("repairs").add({
-      plate:plate.value,brand:brand.value,model:model.value,year:year.value,
-      vin:vin.value,engineNo:engineNo.value,mileage:mileage.value,
-      fuelType:fuelType.value,usageType:usageType.value,
-      date:date.value,system:system.value,jobType:jobType.value,
-      priority:priority.value,status:status.value,
-      symptoms:symptoms.value,rootCause:rootCause.value,
-      diagnosis:diagnosis.value,repairMethod:repairMethod.value,
-      prevention:prevention.value,testResult:testResult.value,
-      technician:technician.value,supervisor:supervisor.value,
-      vendor:vendor.value,partsList:partsList.value,
-      partsCost:partsCost.value,laborCost:laborCost.value,
-      otherCost:otherCost.value,downtime:downtime.value,
-      warranty:warranty.value,remark:remark.value,
-      createdAt:new Date()
-    });
-    vehicleSelect.value=key;
-    loadRepairs(key);
-    closeModal();
-    showToast("บันทึกข้อมูลสำเร็จ ✅","success");
-  }catch(e){
-    showToast("บันทึกไม่สำเร็จ ❌","error");
-  }
+function confirmDeleteRecord(v,id){
+  confirmText.innerText="ยืนยันการลบประวัติการซ่อมรายการนี้?";
+  pendingAction=()=>db.collection("vehicles").doc(v).collection("repairs").doc(id).delete();
+  confirmModal.style.display='flex';
+}
+
+confirmYes.onclick=()=>{pendingAction();confirmModal.style.display='none'}
+function closeConfirm(){confirmModal.style.display='none'}
+
+function save(){
+  let key = plate.value+" | "+brand.value+" "+model.value;
+  let ref=db.collection("vehicles").doc(key);
+  ref.set({created:new Date()},{merge:true});
+  ref.collection("repairs").add({
+    plate:plate.value,brand:brand.value,model:model.value,year:year.value,vin:vin.value,
+    engineNo:engineNo.value,mileage:mileage.value,fuelType:fuelType.value,usageType:usageType.value,
+    date:date.value,system:system.value,jobType:jobType.value,priority:priority.value,status:status.value,
+    symptoms:symptoms.value,rootCause:rootCause.value,diagnosis:diagnosis.value,
+    repairMethod:repairMethod.value,prevention:prevention.value,testResult:testResult.value,
+    technician:technician.value,supervisor:supervisor.value,vendor:vendor.value,
+    partsList:partsList.value,partsCost:partsCost.value,laborCost:laborCost.value,
+    otherCost:otherCost.value,downtime:downtime.value,warranty:warranty.value,remark:remark.value,
+    createdAt:new Date()
+  });
+  closeModal();
 }
 
 loadVehicles();
+</script>
+
+<script>
 if("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js");}
 </script>
 
-<!-- Firebase compat (FIXED) -->
+
+<!-- Firebase compat (FINAL FIX) -->
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
@@ -275,7 +244,8 @@ if("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js");}
   if (!firebase.apps.length) {
     firebase.initializeApp(firebaseConfig);
   }
-  const db = firebase.firestore();
+
+  window.db = firebase.firestore();
 </script>
 
 </body>
